ecmascript/parser/tests/test262-error-references/fail/033c083bb1f44642.js.stderr
error: Invalid character in identifier
 --> $DIR/tests/test262-parser/fail/033c083bb1f44642.js:1:1
  |
1 | \uD800\x62
  | ^^^^^^

